# agartex-service

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml  example.tex  http_server.py  swagger.yaml
.github/workflows/: build-and-publish.yaml  verify.yaml
docker/: caching.rs
latex/: Dockerfile
migrations/: 1_users.sql
postgres/: compose.yaml
src/: auth.rs  constants.rs  database.rs  lib.rs  main.rs  routing.rs  validation.rs
src/control/: mod.rs  sessions.rs  users.rs
src/control/compile/: mod.rs
src/control/sessions/: mod.rs  tests.rs
src/control/users/: mod.rs  tests.rs
src/domain/: sessions.rs  users.rs
src/repository/: sessions.rs  users.rs
src/routing/: compile.rs  mod.rs  sessions.rs  users.rs
src/service/: hash.rs  mod.rs  sessions.rs  users.rs
src/service/compilation/: mod.rs
src/service/execution/: mod.rs
src/service/sessions/: mod.rs  tests.rs
src/service/users/: mod.rs  tests.rs
