[package]
name = "agartex-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
axum = "0.6.10"
axum_database_sessions = { version = "7.0.0", features = ["postgres-rustls"] }
axum_sessions_auth = { version = "7.0.0", features = ["postgres-rustls"] }
bcrypt = "0.14.0"
hyper = "0.14"
serde = { version = "1.0.156", features = ["derive"] }
sqlx = { version = "0.6.2", features = ["postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.4.0", features = ["cors"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
