[package]
name = "agartex-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
axum = { version = "0.6.10", features = ["headers"] }
axum-extra = { version = "0.7.1", features = ["cookie"] }
bcrypt = "0.14.0"
cookie = "0.17.0"
futures = "0.3.27"
http = "0.2.9"
hyper = "0.14"
lazy_static = "1.4.0"
mockall = "0.11.4"
rand = "0.8.5"
regex = "1.7.3"
serde = { version = "1.0.156", features = ["derive"] }
sqlx = { version = "0.6.2", features = ["postgres", "runtime-tokio-rustls", "chrono"] }
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.7", features = ["io"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["cors"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
validator = { version = "0.16.0", features = ["derive"] }
